Import Libraries and Fix Seed

--- a/CMI25_ IMU+THMorTOF_TF BlendingModel_LB82.ipynb
+++ b/CMI25_ IMU+THMorTOF_TF BlendingModel_LB82.ipynb
@@ -5,33 +5,15 @@
    "id": "0959e6a4",
    "metadata": {},
    "source": [
-    "Importing the necessary Libraries"
+    "# Importing the necessary Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d2f54003",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-08-15 19:59:39.925798: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-08-15 19:59:39.978324: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-08-15 19:59:41.201731: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf 2.20.0 keras 3.11.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, json, joblib, numpy as np, pandas as pd\n",
     "from pathlib import Path\n",
@@ -42,16 +24,68 @@
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "\n",
+    "from keras.utils import Sequence, to_categorical, pad_sequences\n",
+    "from keras.models import Model, load_model\n",
+    "from keras.layers import (\n",
+    "    Input, Conv1D, BatchNormalization, Activation, add, MaxPooling1D, Dropout,\n",
+    "    Bidirectional, LSTM, GlobalAveragePooling1D, Dense, Multiply, Reshape,\n",
+    "    Lambda, Concatenate, GRU, GaussianNoise\n",
+    ")\n",
+    "from keras.regularizers import l2\n",
+    "from keras.optimizers import Adam\n",
+    "from keras import backend as KerasTensor\n",
     "import tensorflow as tf\n",
-    "import keras\n",
-    "from keras.utils import to_categorical, pad_sequences, Sequence\n",
-    "print(\"tf\", tf.__version__, \"keras\", keras.__version__)\n",
-    "\n"
+    "import polars as pl\n",
+    "from sklearn.model_selection import StratifiedGroupKFold\n",
+    "from scipy.spatial.transform import Rotation as R"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d199b55",
+   "metadata": {},
+   "source": [
+    "# Fix Seed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "5f0bf946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "def seed_everything(seed):\n",
+    "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    tf.random.set_seed(seed)\n",
+    "    tf.experimental.numpy.random.seed(seed)\n",
+    "    os.environ['TF_CUDNN_DETERMINISTIC'] = '1'\n",
+    "    os.environ['TF_DETERMINISTIC_OPS'] = '1'\n",
+    "seed_everything(seed=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15d24129",
+   "metadata": {},
+   "source": [
+    "# Configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38b821c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "ac1a7a80",
    "metadata": {},
    "outputs": [
@@ -70,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "8853fc26",
    "metadata": {},
    "outputs": [
@@ -80,17 +114,70 @@
      "text": [
       "Devices: [PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU'), PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
       "Logical GPUs: [LogicalDevice(name='/device:GPU:0', device_type='GPU')]\n",
-      "matmul ok, shape: (4000, 4000)\n",
-      "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 15ms/step - accuracy: 0.8920 - loss: 0.4078\n"
+      "matmul ok, shape: (4000, 4000)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1755379773.316144  145045 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 5561 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4060 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n",
+      "2025-08-17 06:29:35.773841: I external/local_xla/xla/service/service.cc:163] XLA service 0x75e858005920 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2025-08-17 06:29:35.773900: I external/local_xla/xla/service/service.cc:171]   StreamExecutor device (0): NVIDIA GeForce RTX 4060 Laptop GPU, Compute Capability 8.9\n",
+      "2025-08-17 06:29:35.813438: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2025-08-17 06:29:35.977580: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:473] Loaded cuDNN version 91200\n",
+      "2025-08-17 06:29:36.591783: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_375', 4 bytes spill stores, 4 bytes spill loads\n",
+      "\n",
+      "2025-08-17 06:29:36.774828: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_375', 64 bytes spill stores, 64 bytes spill loads\n",
+      "\n",
+      "2025-08-17 06:29:37.040937: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_375', 684 bytes spill stores, 684 bytes spill loads\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m 22/118\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5428 - loss: 1.5918"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1755379778.824861  145288 device_compiler.h:196] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m116/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.7791 - loss: 0.7923"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-17 06:29:40.274378: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_375', 4 bytes spill stores, 4 bytes spill loads\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 21ms/step - accuracy: 0.8841 - loss: 0.4177\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x7c82533bbfa0>"
+       "<keras.src.callbacks.history.History at 0x75e97b109a80>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
